# gambling

./: .gitignore  compare_python_netlogo.py  pyproject.toml  test.py
eda/: eda.py
madtor/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.py  README.md  __init__.py  activities.py  agents.py  config.py  demo.py  experiment.py  law_enforcement.py  simulation.py  statistics.py  utils.py
madtor/data/: T2_Links.prn  T2_Nodes.prn
outputs_100orgs/: madtor_results.json
outputs_100orgs/scenario_0_mode_scenario1_eff_0_6/: run_0.parquet  run_1.parquet  run_10.parquet  run_11.parquet  run_12.parquet  run_13.parquet  run_14.parquet  run_15.parquet  run_16.parquet  run_17.parquet  run_18.parquet  run_19.parquet  run_2.parquet  run_20.parquet  run_21.parquet  run_22.parquet  run_23.parquet  run_24.parquet  run_25.parquet  run_26.parquet  run_27.parquet  run_28.parquet  run_29.parquet  run_3.parquet  run_30.parquet  run_31.parquet  run_32.parquet  run_33.parquet  run_34.parquet  run_35.parquet  run_36.parquet  run_37.parquet  run_38.parquet  run_39.parquet  run_4.parquet  run_40.parquet  run_41.parquet  run_42.parquet  run_43.parquet  run_44.parquet  (+60 more)
outputs_100orgs/scenario_10_mode_scenario1_eff_0_6/: run_0.parquet  run_1.parquet  run_10.parquet  run_11.parquet  run_12.parquet  run_13.parquet  run_14.parquet  run_15.parquet  run_16.parquet  run_17.parquet  run_18.parquet  run_19.parquet  run_2.parquet  run_20.parquet  run_21.parquet  run_22.parquet  run_23.parquet  run_24.parquet  run_25.parquet  run_26.parquet  run_27.parquet  run_28.parquet  run_29.parquet  run_3.parquet  run_4.parquet  (+75 more)
(+900 files in other folders)
