[project]
name = "madtor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.18.4",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.3.5",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pyzmq>=27.1.0",
    "ruff>=0.14.8",
    "scipy>=1.16.3",
]
